--- a/aboutus.html
+++ b/aboutus.html
@@ -19,7 +19,7 @@
     <link rel="stylesheet" href="">
     <title>About Us</title>
 </head>
-<body class="aaa">
+<body class="aaaa">
     <nav class="navbar fixed-top navbar-expand-lg navbar-light bg-white">
         <div class="container">
           <a class="navbar-brand logo-text" href="#">Ethio Tour</a>
